--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,11 +1,11 @@
 
-<h1 class="logo shine">schmood</h1>
+<h1 class="logo">schmood</h1>
 
 
 <!-- each corresponding path takes in a parameter accoring to mood which in turn will display the set mood -->
 
 
-<div class="container-fluid">
+<div class="container-fluid top">
     <div class="row">
       <div class="col-sm-2"></div>
       <div class="col-sm-4 spacing justify-content-center"><%= link_to image_tag('happy_still.jpg'), spotify_login_path(user_mood: 'happy'), class: 'happy justify-content-center' %></div>
@@ -20,8 +20,14 @@
     </div>    
 </div>
 
-
-
 <footer>
 <h6>Curated by Alex G. Legaspi</h6>
 </footer>
+
+
+<!-- particles.js container --> 
+<div id="particles-js"></div> 
+
+<!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
+<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+<!-- stats.js lib --> <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
