--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,9 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background: url(image_path('happy_wallpaper.jpg'));
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
-}
+   
+    
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  
+  
