--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -1,33 +1,36 @@
+<div class="outer-container">
 
-<h1 class="logo">schmood</h1>
+  <div class="banner" data--200-top="opacity: 1;" data-top-bottom="opacity: 0;">
 
-
-<!-- each corresponding path takes in a parameter accoring to mood which in turn will display the set mood -->
-
-
-<div class="container-fluid top">
-    <div class="row">
-      <div class="col-sm-2"></div>
-      <div class="col-sm-4 spacing justify-content-center"><%= link_to image_tag('happy_still.jpg'), spotify_login_path(user_mood: 'happy'), class: 'happy justify-content-center' %></div>
-      <div class="col-sm-4 spacing justify-content-center"><%= link_to image_tag('voguing_still.jpg'), spotify_login_path(user_mood: 'voguing'), class: 'voguing justify-content-center' %></div>
-      <div class="col-sm-2"></div>
+    <div class="banner__image" data-0="transform: translateY(0px);" data-top-bottom="transform: translateY(300px);"></div>
+        <div class="banner__caption">
+        <h1 class="logo">schmood</h1>
+        <p>
+            PLAYLISTS ACCORDING TO YA SCHMOOD!
+        </p>
+        </div>
     </div>
-    <div class="row">
-      <div class="col-sm-2"></div>
+
+  <div data-0="background-color:rgb(255,255,255);" data-500="background-color:rgb(255, 230, 0);" class="happy_section">
+    <%= link_to image_tag('happy_still.jpg'), spotify_login_path(user_mood: 'happy'), class: 'mood happy' %>
+  </div>
+
+  <div data-center="background-color:rgb(0, 0, 255);" data-500="background-color:rgb(255, 230, 0);" class="sad_section">
       <div class="col-sm-4 spacing justify-content-center"><%= link_to image_tag('issavibe_still.jpg'), spotify_login_path(user_mood: 'issavibe'), class: 'mood issavibe' %></div>
-      <div class="col-sm-4 spacing justify-content-center"><%= link_to image_tag('moody_still.jpg'), spotify_login_path(user_mood: 'moody'), class: 'mood moody' %></div>
-      <div class="col-sm-2"></div>
-    </div>    
+  </div>
+
+  <div data-center="background-color:rgb(255, 0, 51);" data-500-bottom="background-color:rgb(0, 0, 255);" class="moody_section">
+    <div class="col-sm-4 spacing justify-content-center"><%= link_to image_tag('moody_still.jpg'), spotify_login_path(user_mood: 'moody'), class: 'mood moody' %></div>
+  </div>
+
 </div>
 
-<footer>
-<h6>Curated by Alex G. Legaspi</h6>
-</footer>
 
-
-<!-- particles.js container --> 
+<!-- particles.js container 
 <div id="particles-js"></div> 
 
-<!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
+<! particles.js lib - https://github.com/VincentGarreau/particles.js >
 <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
-<!-- stats.js lib --> <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+<!> stats.js lib > <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+
+-->
