--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Monoton" rel="stylesheet">
-  </head>
+</head>
 
   <body>
     <%= yield %>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
   </body>
 </html>
