redesign phase 3 final look

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -18,7 +18,7 @@
 
   <div data-center="background-color:rgb(0, 0, 255);" data-500="background-color:rgb(255, 230, 0);" class="sad_section  schmooder">
     <p class="buzz_text">sad.</p>
-    <%= link_to image_tag('issavibe_still.jpg'), spotify_login_path(user_mood: 'issavibe'), class: 'mood issavibe' %>
+    <%= link_to image_tag('issavibe_still.jpg'), spotify_login_path(user_mood: 'sad'), class: 'mood issavibe' %>
   </div>
 
   <div data-center="background-color:rgb(255, 0, 51);" data-700="background-color:rgb(0, 0, 255);" class="moody_section  schmooder">
