--- a/app/views/users/happy.erb
+++ b/app/views/users/happy.erb
@@ -1,5 +1,5 @@
 <div class="schmooder">
-<p class="mood_header">happy</p>
+<p class="mood_header">happy.</p>
 </div>
 <div class="schmooder">
 <iframe src="https://open.spotify.com/embed/user/<%= @spotify_user.id %>/playlist/<%= @playlist.id %>" max-width="500" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
