--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -8,6 +8,7 @@
         <p class="sub_header">
             instructions: click on image to generate a spotify playlist according to the mood.
         </p>
+        <%=image_tag("icons8-expand_arrow.png")%>
         </div>
     </div>
 
@@ -18,7 +19,7 @@
 
   <div data-center="background-color:rgb(0, 0, 255);" data-500="background-color:rgb(255, 230, 0);" class="sad_section  schmooder">
     <p class="buzz_text">sad.</p>
-    <%= link_to image_tag('issavibe_still.jpg'), spotify_login_path(user_mood: 'sad'), class: 'mood issavibe' %>
+    <%= link_to image_tag('sad_still.jpg'), spotify_login_path(user_mood: 'sad'), class: 'mood sad' %>
   </div>
 
   <div data-center="background-color:rgb(255, 0, 51);" data-700="background-color:rgb(0, 0, 255);" class="moody_section  schmooder">
@@ -31,4 +32,3 @@
   </div>
 
 </div>
-
