--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     
-    <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Monoton|Shrikhand|Teko" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Monoton|Righteous|Shrikhand|Teko" rel="stylesheet">
+
 </head>
 
   <body>
