--- a/app/views/users/sad.erb
+++ b/app/views/users/sad.erb
@@ -7,7 +7,7 @@
 <iframe src="https://open.spotify.com/embed/user/<%= @spotify_user.id %>/playlist/<%= @playlist.id %>" max-width="500" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 <div class="schmooder">
-<p><%= link_to "back to schmoods", root_path, class: 'footer_text' %></p>
+<p><%= link_to "back to schmoods", root_path, class: 'btn btn-light footer_text' %></p>
 </div>
 
 
